--- a/pipelines/templates/unit-tests.yml
+++ b/pipelines/templates/unit-tests.yml
@@ -31,4 +31,4 @@ jobs:
       env:
         COVERALLS_SERVICE_NAME: "Azure DevOps"
         COVERALLS_REPO_TOKEN: $(COVERALLS_REPO_TOKEN)
-      condition: eq(variables['imageName'], 'linux')
+      condition: eq(variables['imageName'], 'ubuntu-16.04')
