testing task condition syntax

--- a/pipelines/templates/unit-tests.yml
+++ b/pipelines/templates/unit-tests.yml
@@ -24,11 +24,10 @@ jobs:
       npm run test:coverage  # linting is run before test
     displayName: 'Run tests'
 
-  - ${{ if eq(parameters.nodeVersion, '8') }}:
+  - ${{ if (and, eq(parameters.nodeVersion, '8'), eq(variables['imageName'], 'ubuntu-16.04')) }}:
     - bash: |
         cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
       displayName: 'Upload code coverage report'
       env:
         COVERALLS_SERVICE_NAME: "Azure DevOps"
         COVERALLS_REPO_TOKEN: $(COVERALLS_REPO_TOKEN)
-      condition: eq(variables['imageName'], 'ubuntu-16.04')
