--- a/pipelines/templates/unit-tests.yml
+++ b/pipelines/templates/unit-tests.yml
@@ -24,7 +24,7 @@ jobs:
       npm run test:coverage  # linting is run before test
     displayName: 'Run tests'
 
-  - ${{ if (and, eq(parameters.nodeVersion, '8'), eq(variables['imageName'], 'ubuntu-16.04')) }}:
+  - ${{ if (and (eq(parameters.nodeVersion, '8'), eq(variables['imageName'], 'ubuntu-16.04'))) }}:
     - bash: |
         cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
       displayName: 'Upload code coverage report'
