--- a/pipelines/ci.yml
+++ b/pipelines/ci.yml
@@ -1,19 +1,19 @@
 # CI should only run when PRs are opened against dev/master.
+# we're already running tests before release so no need to do it here
+trigger: none
+
 pr:
   - master
   - dev
 
-pool:
-  vmImage: 'ubuntu-latest'
+variables:
+- group: coveralls-credentials  # variable group
 
-steps:
-- task: NodeTool@0
-  displayName: 'Use Node 10.x'
-  inputs:
-    versionSpec: 10.x
+jobs:
+- template: templates/unit-tests.yml  # path relative to this file
+  parameters:
+    nodeVersion: 8
 
-- task: Bash@3
-  displayName: 'Build serverless-azure-functions'
-  inputs:
-    targetType: filePath
-    filePath: ./scripts/build.sh
+- template: templates/unit-tests.yml
+  parameters:
+    nodeVersion: 10
