--- a/pipelines/templates/unit-tests.yml
+++ b/pipelines/templates/unit-tests.yml
@@ -26,9 +26,17 @@ jobs:
 
   - ${{ if eq(parameters.nodeVersion, '8') }}:
     - bash: |
-        cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
+        set -e
+
+        token=$(CODECOV_TOKEN)
+        if [[ -z "${token}" ]]; then
+          echo "Need to set CODECOV_TOKEN"
+          exit 1
+        fi
+
+        # https://docs.codecov.io/docs/about-the-codecov-bash-uploader
+        bash <(curl -s https://codecov.io/bash) -t ${token}
       displayName: 'Upload code coverage report'
       env:
-        COVERALLS_SERVICE_NAME: "Azure DevOps"
-        COVERALLS_REPO_TOKEN: $(COVERALLS_REPO_TOKEN)
+        CODECOV_TOKEN: $(CODECOV_TOKEN)
       condition: eq(variables['imageName'], 'ubuntu-16.04')
