don't auth for npm get requests

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 //registry.npmjs.org/:_authToken=${NPM_TOKEN}
-always-auth=true
+always-auth=false # true will force npm to always require authentication when accessing the registry, even for GET requests.
