--- a/pipelines/publish-release.yml
+++ b/pipelines/publish-release.yml
@@ -19,6 +19,18 @@ steps:
   fetchDepth: 1
 
 - task: Bash@3
+  name: BumpNpmVersion
+  displayName: Bump NPM Release Version
+  inputs:
+    targetType: filePath
+    filePath: ./scripts/version.sh
+    arguments: 'serverless/serverless-azure-functions $(NPM_RELEASE_TYPE)'
+  env:
+    NPM_TOKEN: $(NPM_TOKEN)
+    GITHUB_ACCESS_TOKEN: $(GITHUB_ACCESS_TOKEN)
+    SOURCE_BRANCH: $(Build.SourceBranch)
+
+- task: Bash@3
   displayName: 'Publish serverless-azure-functions to NPM'
   inputs:
     targetType: filePath
