--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "prebuild": "shx rm -rf lib/ && npm run test",
     "build": "npm run compile",
     "generate:spn": "bash ./scripts/generate-service-principal.sh",
-    "generate:changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
-    "generate:changelog-condensed": "npm run generate:changelog && node ./scripts/condenseChangelog.js"
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
+    "changelog:condensed": "npm run changelog && node ./scripts/condenseChangelog.js"
   },
   "repository": {
     "git": "https://github.com/serverless/serverless-azure-functions"
