--- a/pipelines/templates/unit-tests.yml
+++ b/pipelines/templates/unit-tests.yml
@@ -1,5 +1,5 @@
 jobs:
-  - job: "${{ parameters.name }}"
+  - job: "${{parameters.os}}_${{ parameters.name }}"
     strategy:
       matrix:
         linux:
