--- a/pipelines/ci.yml
+++ b/pipelines/ci.yml
@@ -7,13 +7,15 @@ pr:
   - dev
 
 variables:
-- group: code-coverage-credentials  # variable group
+  - group: code-coverage-credentials # variable group
 
 jobs:
-- template: templates/unit-tests.yml  # path relative to this file
-  parameters:
-    nodeVersion: 8
+  - template: templates/unit-tests.yml # path relative to this file
+    parameters:
+      nodeVersion: "8.16.1"
+      name: "Node_8"
 
-- template: templates/unit-tests.yml
-  parameters:
-    nodeVersion: 10
+  - template: templates/unit-tests.yml
+    parameters:
+      nodeVersion: 10.x
+      name: "Node_10"
