Added support to add jwt validation policy inline with serverless yaml

--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "request": "^2.81.0",
     "rimraf": "^2.7.1",
     "semver": "^6.3.0",
-    "xml": "^1.0.1"
+    "xml": "^1.0.1",
+    "xml2js": "^0.4.22"
   },
   "devDependencies": {
     "@azure/ms-rest-js": "^1.8.7",
@@ -74,6 +75,7 @@
     "@types/request": "^2.48.1",
     "@types/serverless": "^1.18.2",
     "@types/xml": "^1.0.3",
+    "@types/xml2js": "^0.4.5",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
     "axios-mock-adapter": "^1.16.0",
