Upgrade windows & mac agents per AzDO removing older support

--- a/pipelines/templates/unit-tests.yml
+++ b/pipelines/templates/unit-tests.yml
@@ -5,9 +5,9 @@ jobs:
         linux:
           imageName: "ubuntu-16.04"
         mac:
-          imageName: "macos-10.13"
+          imageName: "macOS-10.15"
         windows:
-          imageName: "vs2017-win2016"
+          imageName: "windows-2019"
     displayName: "${{ parameters.name }}"
     pool:
       vmImage: $(imageName)
