--- a/pipelines/templates/unit-tests.yml
+++ b/pipelines/templates/unit-tests.yml
@@ -5,7 +5,7 @@ jobs:
         linux:
           imageName: "ubuntu-16.04"
         mac:
-          imageName: "macos-10.13"
+          imageName: "macOS-10.15"
         windows:
           imageName: "vs2017-win2016"
     displayName: "${{ parameters.name }}"
