--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "acorn": "^7.0.0",
     "axios": "^0.18.0",
     "azure-functions-core-tools": "^3.0.2245",
+    "cross-spawn": "^7.0.2",
     "deep-equal": "^1.0.1",
     "js-yaml": "^3.13.1",
     "jsonpath": "^1.0.1",
