--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "eslint": "^5.16.0",
     "jest": "^24.8.0",
     "jest-cli": "^24.8.0",
+    "jest-os-detection": "^1.1.1",
     "mock-fs": "^4.10.0",
     "mock-spawn": "^0.2.6",
     "serverless": "^1.44.1",
