--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "acorn": "^7.0.0",
     "axios": "^0.18.0",
     "azure-functions-core-tools": "^3.0.2245",
+    "cross-spawn": "^7.0.2",
     "deep-equal": "^1.0.1",
     "js-yaml": "^3.13.1",
     "jsonpath": "^1.0.1",
@@ -84,6 +85,7 @@
     "eslint": "^5.16.0",
     "jest": "^24.8.0",
     "jest-cli": "^24.8.0",
+    "jest-os-detection": "^1.1.1",
     "mock-fs": "^4.10.0",
     "mock-spawn": "^0.2.6",
     "serverless": "^1.44.1",
