--- a/integrationTests/configurations/python36-apim/serverless.yml
+++ b/integrationTests/configurations/python36-apim/serverless.yml
@@ -3,8 +3,9 @@ service: py36-apim
 provider:
   name: azure
   runtime: python3.6
+  prefix: tmp
+  stage: qa
   region: West Europe
-  prefix: sls
   apim: true
 
 plugins:
