--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "lodash": "^4.16.6",
     "md5": "^2.2.1",
     "open": "^6.3.0",
+    "querystring": "^0.2.0",
     "request": "^2.81.0",
     "rimraf": "^2.7.1",
     "semver": "^6.3.0",
