Update region in deploy test

--- a/clvr.config.json
+++ b/clvr.config.json
@@ -1,4 +1,4 @@
 {
   "tests": "**/*deploy.clvr.ts",
-  "directories": "integrationTests/configurations/python*/"
+  "directories": "integrationTests/configurations/**/"
 }
