--- a/clvr.config.json
+++ b/clvr.config.json
@@ -1,4 +1,4 @@
 {
-  "tests": "**/*deploy.clvr.ts",
-  "directories": "integrationTests/configurations/**/"
+  "tests": "integrationTests/**/*deploy.clvr.ts",
+  "directories": "integrationTests/configurations/python*/"
 }
