ci: Updates to automation (#455)
* Update config

* Update region in deploy test

* Add silent flag

* clvr fixes

* All runtimes

* Update glob and add dotnet

* Update clvr

* Remove dotnet for now

* Update region for node 12 linux

* split out runtimes into different steps

* split out into different jobs

* add build steps before int tests

* Remove extraneous step

* Update region for node 12 on linux

* Remove node linux premium

* remove dotnet refs

* update clvr

--- a/clvr.config.json
+++ b/clvr.config.json
@@ -1,4 +1,4 @@
 {
-  "tests": "**/*.clvr.ts",
-  "directories": "integrationTests/configurations/python*/"
+  "testPattern": "integrationTests/**/*.clvr.ts",
+  "parentDir": "integrationTests/configurations/"
 }
