--- a/integrationTests/configurations/dotnet22-linux/serverless.yml
+++ b/integrationTests/configurations/dotnet22-linux/serverless.yml
@@ -8,12 +8,14 @@ provider:
   prefix: tmp
   stage: qa
   apim: true
+  environment:
+    VARIABLE_FOO: 'foo'
 
 plugins:
   - serverless-azure-functions
 
 functions:
-  Hello:
+  hello:
     handler: hello
     events:
       - http: true
