ci: Add name to job

--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -9,6 +9,7 @@ on:
 name: Integration Tests
 jobs:
   multi_os_integration_tests:
+    name: Integration Tests
     runs-on: ubuntu-latest
     strategy:
       matrix:
