--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -29,12 +29,12 @@ jobs:
     - name: build
       run: tsc
     - name: setup dotnet 2.2
-      if: ${{ matrix.runtime }} == 'dotnet22'
+      if: matrix.runtime == 'dotnet22'
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '2.2.100'
     - name: setup dotnet 3.1
-      if: ${{ matrix.runtime }} == 'dotnet31'
+      if: matrix.runtime == 'dotnet22'
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '3.1.100'
