--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -15,6 +15,7 @@ jobs:
       matrix:
         runtime: [dotnet22, dotnet31, node10, node12]
         os: [linux, windows]
+      fail-fast: false
     steps:
     - uses: actions/checkout@master
     - name: Cache node_modules
