--- a/integrationTests/configurations/dotnet31-linux/sls-csharp.csproj
+++ b/integrationTests/configurations/dotnet31-linux/sls-csharp.csproj
@@ -4,6 +4,7 @@
     <AzureFunctionsVersion>v3</AzureFunctionsVersion>
     <RootNamespace>sls_csharp</RootNamespace>
     <EnableDefaultCompileItems>False</EnableDefaultCompileItems>
+    <GenerateRuntimeConfigurationFiles>True</GenerateRuntimeConfigurationFiles>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.31" />
