--- a/integrationTests/configurations/dotnet31-linux/sls-csharp.csproj
+++ b/integrationTests/configurations/dotnet31-linux/sls-csharp.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.31" />
+    <PackageReference Include="Microsoft.NETCore.App" Version="2.1.0" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
@@ -19,6 +20,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="*.cs" Exclude="node_modules\**\*.cs"/>
+    <Compile Include="*.cs" Exclude="node_modules\**\*.cs" />
   </ItemGroup>
 </Project>
