--- a/integrationTests/configurations/dotnet31-windows/sls-csharp.csproj
+++ b/integrationTests/configurations/dotnet31-windows/sls-csharp.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.31" />
+    <PackageReference Include="Microsoft.NETCore.App" Version="2.1.0" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
