--- a/integrationTests/configurations/dotnet22-windows/sls-csharp.csproj
+++ b/integrationTests/configurations/dotnet22-windows/sls-csharp.csproj
@@ -6,7 +6,8 @@
     <EnableDefaultCompileItems>False</EnableDefaultCompileItems>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.31" />
+    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.7" />
+    <PackageReference Include="Microsoft.NETCore.App" Version="2.2.8" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
