--- a/integrationTests/configurations/dotnet22-windows/sls-csharp.csproj
+++ b/integrationTests/configurations/dotnet22-windows/sls-csharp.csproj
@@ -4,6 +4,7 @@
     <AzureFunctionsVersion>v3</AzureFunctionsVersion>
     <RootNamespace>sls_csharp</RootNamespace>
     <EnableDefaultCompileItems>False</EnableDefaultCompileItems>
+    <GenerateRuntimeConfigurationFiles>True</GenerateRuntimeConfigurationFiles>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.7" />
@@ -19,6 +20,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="*.cs" Exclude="node_modules\**\*.cs"/>
+    <Compile Include="*.cs" Exclude="node_modules\**\*.cs" />
   </ItemGroup>
 </Project>
