--- a/integrationTests/configurations/dotnet22-linux/package.json
+++ b/integrationTests/configurations/dotnet22-linux/package.json
@@ -7,8 +7,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "serverless-azure-functions": "^1.0.2-35"
-  }
+  "license": "ISC"
 }
