--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -39,15 +39,8 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '3.1.103'
-    - name: deploy & invoke ${{ matrix.runtime }}-${{ matrix.os }}
+    - name: package, deploy, invoke, remove
       run: npm run test:int -- -t deploy -d ${{ matrix.runtime }}-${{ matrix.os }}
-      env:
-        AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID}}
-        AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID}}
-        AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET}}
-        AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID}}
-    - name: remove ${{ matrix.runtime }}-${{ matrix.os }}
-      run: npm run test:int -- -t remove -d ${{ matrix.runtime }}-${{ matrix.os }}
       env:
         AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID}}
         AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID}}
@@ -72,15 +65,8 @@ jobs:
       run: npm install
     - name: build
       run: tsc
-    - name: deploy & invoke python
+    - name: package, deploy, invoke, remove
       run: npm run test:int -- -t deploy -d ${{ matrix.runtime }}
-      env:
-        AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID}}
-        AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID}}
-        AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET}}
-        AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID}}
-    - name: remove ${{ matrix.runtime }}
-      run: npm run test:int -- -t remove -d ${{ matrix.runtime }}
       env:
         AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID}}
         AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID}}
