--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -66,7 +66,7 @@ jobs:
     - name: build
       run: tsc
     - name: package, deploy, invoke, remove
-      run: npm run test:int -- -t deploy -d ${{ matrix.runtime }}
+      run: npm run test:int -- -t deploy.* -d '${{ matrix.runtime }}.*'
       env:
         AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID}}
         AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID}}
