--- a/.github/workflows/integration-tests-dotnet.yml
+++ b/.github/workflows/integration-tests-dotnet.yml
@@ -1,20 +1,20 @@
 on:
   schedule:
-    # Run twice per day (12:45 AM & PM)
-    - cron: '45 */12 * * *'
+    # Run twice per day (1:00 AM & 1:00 PM)
+    - cron: '0 1,13 * * *'
   push:
     branches:
       # Push to a branch that ends with "/trigger-int-tests" to manually trigger tests
-      - '**/trigger-int-tests'
-name: Integration Tests
+      - '**/dotnet-int-tests'
+name: .NET Integration Tests
 jobs:
-  multi_os_integration_tests:
+  integration_tests:
     name: Test
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        runtime: [dotnet22, dotnet31, node10, node12]
-        os: [linux, windows]
+        runtime: [ dotnet22, dotnet31 ]
+        os: [ linux, windows ]
       fail-fast: false
     steps:
     - uses: actions/checkout@master
@@ -48,33 +48,7 @@ jobs:
     
     # Run the integration test
     - name: package, deploy, invoke, remove
-      run: npm run test:int -- -t deploy.* -d '${{ matrix.runtime }}-${{ matrix.os }}(-external|-webpack)?'
-      env:
-        AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID}}
-        AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID}}
-        AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET}}
-        AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID}}
-  int_tests_python:
-    name: Test
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        runtime: [python36, python37, python38]
-    steps:
-    - uses: actions/checkout@master
-    - name: Cache node_modules
-      id: cache-modules
-      uses: actions/cache@v1
-      with:
-        path: node_modules
-        key: ${{ runner.OS }}-build-${{ hashFiles('package.json') }}
-    - name: npm install
-      if: steps.cache-modules.outputs.cache-hit != 'true'
-      run: npm install
-    - name: build
-      run: tsc
-    - name: package, deploy, invoke, remove
-      run: npm run test:int -- -t deploy.* -d ${{ matrix.runtime }}
+      run: npm run test:int -- -t deploy.* -d '${{ matrix.runtime }}-${{ matrix.os }}'
       env:
         AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID}}
         AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID}}
