ci: .NET Core Integration tests & Workflow fixes (#457)
* fix: Print error message for invoke command

* feat: Add .NET integration tests

* fix: Update pipeline run statement

* fix: Update to use correct dotnet versions

* fix: Update .NET core tests

* docs: Update link to workflow in readme

* fix: Update service name for dotnet tests

* fix: Update to use correct function name in yml

* ci: Update workflow file to use matrix

* ci: Add runs-on property

* ci: Add name to job

* ci: Normalize names

* ci: Empty string name

* ci: Revert name

* ci: Update if condition

* ci: Update fail-fast to false

* ci: Update if condition for dotnet

* fix: Update dotnet 3.1 projects

* ci: Add env vars

* ci: Use 3.1.103 .net core version

* fix: Add retries, separate packaging and deploy step, add generate runtime config files

* fix: Add netcore dep

* Update SDK versions

* ci: Remove premium test

* ci: Fix dotnet projects

* ci: Fix runtime of dotnet 2.2 projects

* fix: Dotnet 2.2 package version

* ci: Split out remove step

* fix: Name of python job

* ci: Combine deploy and remove again

* fix: Temporarily remove assertions on output for deploy

* ci: Add deploy assertions back

* fix: Update to use regex filters in clvr

* fix: Fix syntax error

* fix: Update int tests commands

* fix: Update python version in command

* Node 10 & 12 fail APIM, .NET 2.2 sync triggers

* ci: Split out integration test workflows

* docs: Add links to README

--- a/integrationTests/configurations/dotnet22-linux/serverless.yml
+++ b/integrationTests/configurations/dotnet22-linux/serverless.yml
@@ -1,33 +1,24 @@
-service: nd12-win-prem
+service: dt22-lin
 
 provider:
   name: azure
+  runtime: dotnet2.2
+  region: West Europe
   prefix: tmp
   stage: qa
-  region: Central US
-  runtime: nodejs12
-  os: windows
+  os: linux
   apim: true
-  type: premium
-
   environment:
     VARIABLE_FOO: 'foo'
 
 plugins:
   - serverless-azure-functions
 
-package:
-  exclude:
-    - local.settings.json
-    - .vscode/**
-
 functions:
   hello:
-    handler: hello.sayHello
+    handler: hello
     events:
       - http: true
         methods:
           - GET
         authLevel: anonymous
-
- 
