--- a/pipelines/publish-release.yml
+++ b/pipelines/publish-release.yml
@@ -1,4 +1,7 @@
-trigger: none
+trigger:
+  branches:
+    include:
+    - master
 pr: none
 
 pool:
@@ -24,7 +27,7 @@ steps:
   inputs:
     targetType: filePath
     filePath: ./scripts/version.sh
-    arguments: 'serverless/serverless-azure-functions $(NPM_RELEASE_TYPE)'
+    arguments: 'serverless/serverless-azure-functions'
   env:
     NPM_TOKEN: $(NPM_TOKEN)
     GITHUB_ACCESS_TOKEN: $(GITHUB_ACCESS_TOKEN)
