--- a/.github/workflows/integration-tests-node.yml
+++ b/.github/workflows/integration-tests-node.yml
@@ -36,7 +36,7 @@ jobs:
     
     # Run the integration test
     - name: package, deploy, invoke, remove
-      run: npm run test:int -- -t deploy.* -d '${{ matrix.runtime }}-${{ matrix.os }}(-external|-webpack)?'
+      run: npm run test:int -- -t deploy.* -d '${{ matrix.runtime }}-${{ matrix.os }}(-webpack)?'
       env:
         AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID}}
         AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID}}
