--- a/integrationTests/configurations/node12-windows-premium/serverless.yml
+++ b/integrationTests/configurations/node12-windows-premium/serverless.yml
@@ -2,7 +2,7 @@ service: nd12-win-prem
 
 provider:
   name: azure
-  prefix: tmp
+  prefix: int
   stage: qa
   region: Central US
   runtime: nodejs12
