--- a/integrationTests/configurations/dotnet31-linux/serverless.yml
+++ b/integrationTests/configurations/dotnet31-linux/serverless.yml
@@ -4,7 +4,7 @@ provider:
   name: azure
   runtime: dotnet3.1
   region: West Europe
-  prefix: tmp
+  prefix: int
   stage: qa
   os: linux
   apim: true
