--- a/integrationTests/configurations/node10-linux-external/serverless.yml
+++ b/integrationTests/configurations/node10-linux-external/serverless.yml
@@ -2,7 +2,7 @@ service: nd10-lin-ext
 
 provider:
   name: azure
-  prefix: tmp
+  prefix: int
   stage: qa
   region: West Europe
   runtime: nodejs10
