adding validate github action to pull requests raised to the master branch

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "lint:fix": "eslint src/**/*.ts --fix",
     "pretest": "npm run lint",
     "test": "jest",
-    "test:ci": "npm run test -- --ci",
-    "test:coverage": "npm run test -- --coverage",
+    "test:ci": "npm run test:coverage -- --ci",
+    "test:coverage": "npm run test -- --config ./jest.config.js",
     "clean:int": "rm -rf integrationTests/configurations/**/.serverless integrationTests/configurations/**/node_modules integrationTests/configurations/**/local.settings.json",
     "pretest:int": "npm run clean:int",
     "test:int": "clvr",
