--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -11,6 +11,7 @@ jobs:
         version: [12, 14, 16, 18]
         os: [ubuntu-latest, windows-latest]
 
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
