--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -41,10 +41,5 @@ jobs:
       - name: Validate lint rules
         run: npm run lint
 
-      - name: Run tests and report code coverage
-        uses: gligorkot/jest-reporter-action@v0.5.0
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          test-command: npm run test:ci
-        env:
-          CI: true
+      - name: Run tests
+        run: npm run test:ci
