--- a/.github/workflows/integration-tests-node.yml
+++ b/.github/workflows/integration-tests-node.yml
@@ -1,45 +1,53 @@
+name: Integration tests
+
 on:
-  schedule:
-    # Run twice per day (2:00 AM & 2:00 PM)
-    - cron: '0 2/14 * * *'
   push:
     branches:
-      # Push to a branch that ends with "/trigger-int-tests" to manually trigger tests
-      - '**/node-int-tests'
-name: Node Integration Tests
+      - integration-test-possible-fix
+
 jobs:
-  multi_os_integration_tests:
-    name: Test
+  integration-tests:
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
-        runtime: [ node10, node12 ]
-        os: [ linux, windows ]
+        runtime: [node12, node14, node16, node18]
+        os: [linux, windows]
       fail-fast: false
+
     steps:
-    - uses: actions/checkout@master
-    
-    # Install dependencies and cache them
-    - name: Cache node_modules
-      id: cache-modules
-      uses: actions/cache@v1
-      with:
-        path: node_modules
-        key: ${{ runner.OS }}-build-${{ hashFiles('package.json') }}
-    - name: npm install
-      if: steps.cache-modules.outputs.cache-hit != 'true'
-      run: npm install
-    
-    # Build plugin
-    - name: build
-      run: tsc
-    
-    # Run the integration test
-    - name: package, deploy, invoke, remove
-      run: npm run test:int -- -t deploy.* -d '${{ matrix.runtime }}-${{ matrix.os }}(-webpack)?'
-      env:
-        AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID}}
-        AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID}}
-        AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET}}
-        AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID}}
-  
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Retrieve dependencies from cache
+        id: cacheNpm
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.npm
+            node_modules
+          key: npm-v${{ matrix.version }}-${{ matrix.os }}-${{ github.ref }}-${{ hashFiles('package.json') }}
+          restore-keys: |
+            npm-v${{ matrix.version }}-${{ matrix.os }}-${{ github.ref }}-
+            npm-v${{ matrix.version }}-${{ matrix.os }}-refs/heads/master-
+
+      - name: Install Node.js and npm
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.version }}
+
+      - name: Install dependencies
+        if: steps.cacheNpm.outputs.cache-hit != 'true'
+        run: |
+          npm ci
+
+      - name: Compile
+        run: npm run compile
+
+      - name: Run integration tests
+        run: npm run test:int -- -t deploy.* -d '${{ matrix.runtime }}-${{ matrix.os }}(-webpack)?'
+        env:
+          AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID}}
+          AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID}}
+          AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET}}
+          AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID}}
