moving to using local serverless-azure-functions package and adding package lock for all integration configurations

--- a/integrationTests/configurations/node14-linux/package.json
+++ b/integrationTests/configurations/node14-linux/package.json
@@ -10,8 +10,7 @@
     "azure",
     "serverless"
   ],
-  "dependencies": {},
   "devDependencies": {
-    "serverless-azure-functions": "^1.0.0"
+    "serverless-azure-functions": "file:../../.."
   }
 }
