--- a/integrationTests/configurations/node14-linux-webpack/package.json
+++ b/integrationTests/configurations/node14-linux-webpack/package.json
@@ -12,7 +12,7 @@
   ],
   "dependencies": {},
   "devDependencies": {
-    "serverless-azure-functions": "^1.0.0",
+    "serverless-azure-functions": "file:../../..",
     "serverless-webpack": "^5.3.1",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
