moving the openssl flag to serverless environment vars for node18 webpack builds (not sure this will work)

--- a/integrationTests/configurations/node18-linux-webpack/serverless.yml
+++ b/integrationTests/configurations/node18-linux-webpack/serverless.yml
@@ -11,6 +11,7 @@ provider:
 
   environment:
     VARIABLE_FOO: 'foo'
+    NODE_OPTIONS: '--openssl-legacy-provider'
 
 plugins:
   - serverless-azure-functions
