adding some node options to running of integration tests

--- a/.github/workflows/integration-tests-node.yml
+++ b/.github/workflows/integration-tests-node.yml
@@ -47,6 +47,7 @@ jobs:
       - name: Run integration tests
         run: npm run test:int -- -t deploy.* -d 'node${{ matrix.version }}-${{ matrix.os }}(-webpack)?'
         env:
+          NODE_OPTIONS: "--max_old_space_size=8192 --openssl-legacy-provider"
           AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID}}
           AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID}}
           AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET}}
